[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprites/Varios/particlePack_1.1/PNG (Transparent)/trace_07.png" type="Texture" id=1]
[ext_resource path="res://Scenas/Test Topdown Move/Props/bullet.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 4.61785

[node name="Bullet" type="Area2D"]
input_pickable = false
monitorable = false
collision_layer = 0
collision_mask = 63
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.0419922, 0 )
scale = Vector2( 0.215, 0.079 )
texture = ExtResource( 1 )
[connection signal="area_entered" from="." to="." method="_on_Bullet_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Bullet_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Bullet_body_exited"]
